Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3280

Segfault in new freelist bulk freeing

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 5.2.0
    • Core
    • None

    Description

      #0  0x00007ffff7ddbbfc in ink_freelist_free_bulk (f=0x1092100, head=0x7fffd8060550, tail=0x7fffe001d1a0, num_item=481) at ../../../../lib/ts/ink_queue.cc:318
      #1  0x000000000077565b in ClassAllocator<Event>::free_bulk (this=0x1045780 <eventAllocator>, head=0x7fffd8060550, tail=0x7fffe001d1a0, num_item=481) at ../../../../lib/ts/Allocator.h:151
      #2  0x0000000000775572 in thread_freeup<Event> (a=..., l=...) at ../../../../iocore/eventsystem/I_ProxyAllocator.h:114
      #3  0x0000000000776e53 in PriorityEventQueue::check_ready (this=0x7ffff658eb90, now=1420665927680188917, t=0x7ffff648e010) at ../../../../iocore/eventsystem/PQ-List.cc:53
      #4  0x0000000000774c07 in EThread::execute (this=0x7ffff648e010) at ../../../../iocore/eventsystem/UnixEThread.cc:215
      #5  0x0000000000773e22 in spawn_thread_internal (a=0x1123840) at ../../../../iocore/eventsystem/Thread.cc:88
      #6  0x00007ffff7b4152a in start_thread (arg=0x7ffff5a83700) at pthread_create.c:310
      #7  0x0000003748f0077d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109
      

      Attachments

        Activity

          People

            briang Brian Geffon
            zwoop Leif Hedstrom
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: