TS-3280 Fix the bulk free 0xDEADBEEF clearing code.

This is primarily a fix from Brian G.